--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Student Placement Prediction</h2>
+        <h2>Crop Recommendation</h2>
         <form action="/predict" method="post">
             <label for="N">N :</label>
             <input type="number" name="N" required>
