--- a/templates/index.html
+++ b/templates/index.html
@@ -49,14 +49,14 @@
     <div class="form-container">
         <h2>Crop Recommendation</h2>
         <form action="/predict" method="post">
-            <label for="N">N :</label>
+            <label for="N">Nitrogen (N) :</label>
             <input type="number" name="N" required>
             
-            <label for="P">P :</label>
+            <label for="P">phosphorus (P) :</label>
             <input type="number" name="P" required>
             			
 
-            <label for="K">K :</label>
+            <label for="K">potassium (K) :</label>
             <input type="number" name="K" required>
             
             <label for="temperature">Temperature :</label>
