--- a/templates/index.html
+++ b/templates/index.html
@@ -52,11 +52,11 @@
             <label for="N">Nitrogen (N) :</label>
             <input type="number" name="N" required>
             
-            <label for="P">phosphorus (P) :</label>
+            <label for="P">Phosphorus (P) :</label>
             <input type="number" name="P" required>
             			
 
-            <label for="K">potassium (K) :</label>
+            <label for="K">Potassium (K) :</label>
             <input type="number" name="K" required>
             
             <label for="temperature">Temperature :</label>
