--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
             <label for="K">Potassium (K) :</label>
             <input type="number" name="K" required>
             
-            <label for="temperature">Temperature :</label>
+            <label for="temperature">Temperature in °C :</label>
             <input type="number" step="any" name="Temperature" required>
             
             <label for="humidity">Humidity :</label>
