--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
             <label for="humidity">Humidity :</label>
             <input type="number" step="any" name="Humidity" required>
 
-            <label for="PH">PH :</label>
+            <label for="PH">pH :</label>
             <input type="number" step="any" name="PH" required>
 
             <label for="Rainfall">Rainfall :</label>
